--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,15 @@
 {
-    "window.zoomLevel": -2,
+    "window.zoomLevel": 0,
     "workbench.colorTheme": "Zenburn",
-    "editor.fontSize": 16,
+    "editor.fontSize": 13,
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 5000
+    "files.autoSaveDelay": 5000,
+    "editor.fontFamily": "SF Mono",
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true
+    }
 }
