git fetch all alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
     # open all filed modified in commit in EDITOR
     editc = "!sh -c '${EDITOR:-vi} $(git diff-tree --no-commit-id --name-only \
         -r ${1:-HEAD})' -"
+    get = fetch --all --prune
 [http]
     sslverify = false
 [diff]
