--- a/config/i3/config
+++ b/config/i3/config
@@ -144,10 +144,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym lemicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -178,3 +178,6 @@ for_window [class="^.*"] border pixel 0
 gaps inner 10
 gaps outer 10
 
+# set desktop background (use feh later)
+# exec --no-startup-id xsetroot -solid "#019875" # pantone emerald
+exec --no-startup-id feh --bg-scale /home/john/Dropbox/symlinks/Backgrounds/wallhaven-168644.jpg
