--- a/config/i3/config
+++ b/config/i3/config
@@ -11,6 +11,11 @@
 
 set $mod Mod1
 
+set $bgcolor 393939
+set $fgcolor 48B685
+set $txtcolor DFEFE2
+set $urgent EF6155
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -67,7 +72,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+' split h
+bindsym $mod+Shift+v split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -147,7 +152,7 @@ mode "resize" {
         bindsym h resize shrink width 10 px or 10 ppt
         bindsym j resize grow height 10 px or 10 ppt
         bindsym k resize shrink height 10 px or 10 ppt
-        bindsym lemicolon resize grow width 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -171,6 +176,16 @@ bindsym $mod+grave exec "rofi -show window"
 bar {
         status_command i3status
         position top
+
+        font xft:Lato Mono Regular 8, siji 8
+
+        colors {
+            background #$bgcolor
+            statusline #$txtcolor
+            separator #$txtcolor
+            focused_workspace #$fgcolor #$fgcolor #$bgcolor
+            inactive_workspace #$bgcolor #$bgcolor #$txtcolor
+        }
 }
 
 hide_edge_borders both
@@ -178,6 +193,14 @@ for_window [class="^.*"] border pixel 0
 gaps inner 10
 gaps outer 10
 
+client.focused           #$fgcolor #$fgcolor #$bgcolor
+client.unfocused         #$bgcolor #$bgcolor #$fgcolor
+client.focused_inactive  #$bgcolor #$bgcolor #$fgcolor
+client.urgent            #$bgcolor #$bgcolor #$urgent
+
 # set desktop background (use feh later)
 # exec --no-startup-id xsetroot -solid "#019875" # pantone emerald
 exec --no-startup-id feh --bg-scale /home/john/Dropbox/symlinks/Backgrounds/wallhaven-168644.jpg
+
+# map caps->escape
+exec --no-startup-id setxkbmap -layout us -option caps:escape
