--- a/config/i3status/config
+++ b/config/i3status/config
@@ -7,23 +7,32 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-        colors = false
+        colors = true
         interval = 5
 }
 
-order += "ethernet enp12s0"
 order += "volume master"
+order += "disk /"
+order += "cpu_usage"
 order += "cpu_temperature 0"
-order += "load"
+#order += "load"
 order += "tztime local"
+order += "ethernet enp12s0"
+
+disk "/" {
+    format = "disk: %avail"
+}
 
 ethernet enp12s0 {
-  format_up = "%ip (%speed)"
-  format_down = "down"
+  format_up = "%ip"
+}
+
+cpu_usage {
+    format = "cpu: %usage"
 }
 
 cpu_temperature 0 {
-  format = "%degrees°C"
+  format = "🌡️ %degrees°C"
 }
 
 volume master {
@@ -35,7 +44,7 @@ volume master {
 }
 
 load {
-  format = "%1min %5min %15min"
+  format = "load: %1min %5min %15min"
   format_above_threshold= "⚡ %1min %5min %15min ⚡"
 }
 
