--- a/config/i3/config
+++ b/config/i3/config
@@ -18,7 +18,7 @@ set $urgent EF6155
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Roboto Mono 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -177,7 +177,8 @@ bar {
         status_command i3status
         position top
 
-        font xft:Lato Mono Regular 8, siji 8
+        # font xft:Lato Mono Regular 8, siji 8
+        font pango:Roboto Mono 10, siji 8
 
         separator_symbol //
         colors {
@@ -201,7 +202,7 @@ client.urgent            #$bgcolor #$bgcolor #$urgent
 
 # set desktop background (use feh later)
 # exec --no-startup-id xsetroot -solid "#019875" # pantone emerald
-exec --no-startup-id feh --bg-scale /home/john/Dropbox/symlinks/Backgrounds/wallhaven-168644.jpg
+exec --no-startup-id feh --bg-scale /home/john/Dropbox/symlinks/Backgrounds/wallhaven-50906.png
 
 # map caps->escape
 exec --no-startup-id setxkbmap -layout us -option caps:escape
