use histogram as diff alg, which is just a faster patience
https://stackoverflow.com/a/32367597/31307

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,7 +30,7 @@
     sslverify = false
 [diff]
     tool = vimdiff
-    algorithm = patience
+    algorithm = histogram
 [merge]
     tool = vimdiff
     conflictstyle = diff3
