--- a/config/i3/config
+++ b/config/i3/config
@@ -171,6 +171,12 @@ bindsym $mod+r mode "resize"
 bindsym $mod+space exec "rofi -show run"
 bindsym $mod+grave exec "rofi -show window"
 
+# corsair keyboard
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
