--- a/config/i3status/config
+++ b/config/i3status/config
@@ -19,7 +19,7 @@ order += "disk /media/john/Quantum"
 order += "cpu_usage"
 order += "cpu_temperature 0"
 # order += "memory"
-order += "load"
+# order += "load"
 order += "tztime local"
 order += "ethernet enp12s0"
 order += "ethernet tun0"
