--- a/config/i3/config
+++ b/config/i3/config
@@ -12,9 +12,15 @@
 set $mod Mod1
 
 set $bgcolor 393939
-set $fgcolor 48B685
-set $txtcolor DFEFE2
-set $urgent EF6155
+set $urgent EF5155
+
+# purple 
+set $fgcolor 9e69c9
+set $txtcolor ccc3d4
+
+# emerald 
+# set $fgcolor 48B685
+# set $txtcolor DFEFE2
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
