--- a/config/i3/config
+++ b/config/i3/config
@@ -182,6 +182,9 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
+# screenshot with flameshot
+bindsym Print exec --no-startup-id flameshot full -p "$HOME/Pictures"
+
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
